# vellum-lang

./: Cargo.toml  Specification.md  example.abi  test.sh
.github/workflows/: tests.yml
c++/include/: closure.hpp  owned_ptr.hpp  vellum.hpp
c++/include/vellum/: closure.hpp  functions.hpp  owned.hpp  owned_ptr.hpp  pointers.hpp  slice.hpp
compiler/: Cargo.toml  askama.toml
compiler/src/: compile.rs  type_check.rs
compiler/src/compile/: c.rs  cpp.rs  python.rs
compiler/src/type_check/: valid.rs
compiler/templates/c/: _macros.h  compile.h  export.c  export.h  export.inl  import.h
compiler/templates/c++/: _functions.hpp  _implement_macro.hpp  _structs.hpp  compile.hpp  export.inl  import.hpp
compiler/templates/python/: module.py
examples/multi-language/: README.md  mylibrary.abi
examples/multi-language/c/: .gitignore  Makefile  main.c  mylibrary.c
examples/multi-language/c++/: .gitignore  Makefile  main.cpp  mylibrary.cpp
python/vellum/: __init__.py
vellum-compiler/: Cargo.toml  askama.toml
vellum-compiler/src/: compile.rs  main.rs  parse.rs  symbols.rs  type_check.rs
vellum-compiler/src/compile/: cpp.rs
vellum-compiler/src/parse/: ast.rs  grammar.lalrpop  lexer.rs
vellum-compiler/src/parse/ast/: pointer.rs  ty.rs
vellum-compiler/src/type_check/: sort_items.rs  valid.rs
vellum-compiler/templates/c++/: _functions.hpp  _implement_macro.hpp  _macros.hpp  _structs.hpp  compile.hpp
vellum-compiler/templates/python/: module.py
vellum-lang/: Cargo.toml
vellum-lang/src/: ast.rs  grammar.lalrpop  lexer.rs  lib.rs
(+19 files in other folders)
