[package]
name = "vellum-compiler"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vellum"
path = "src/main.rs"

[build-dependencies]
lalrpop = "0.22"

[dependencies]
clap = { version = "4", features = ["derive"] }
lalrpop-util = "0.22"
logos = "0.15"
codespan-reporting = "0.12"
petgraph = "0.8"
askama = "0.14"
