[package]
name = "vellum-compiler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vellum"
path = "src/main.rs"

[build-dependencies]
lalrpop = "0.19"

[dependencies]
clap = { version = "3", features = ["derive"] }
lalrpop-util = "0.19"
logos = "0.12"
codespan-reporting = "0.11"
petgraph = "0.6"
